# GeliShell

./: .gitignore  AGENTS.md  Cargo.toml  GetCode.ps1  LICENSE  README.md  bash_installer.sh  cog.toml  deny.toml  docs.db  i18n-migration.md  install.bat  install.ps1  install.sh  rebuild-rag.ps1  releases-plan.md  scripting-medio-rag.md  win_legacy_installer.bat  windows_installer.ps1
.cargo/: config.toml
.codeql/: codeql-config.yml
.codeql/policies/: unsafe-policy.ql
.codeql/queries/: qlpack.yml  security-hardening.qls
.github/: CODEOWNERS
.github/workflows/: codeql.yml  commitlint.yml  lint.yml  release.yml  security-audit.yml  supply-chain.yml
commands/ecosystems/: cargo-lang.toml  docker.toml  dotnet.toml  git.toml  node.toml  npm.toml  pnpm.toml  python.toml  typescript.toml
docs/: uso-comandos-y-tui.md
docs/kb/: arquitectura-interna-subsistemas-contexto-general.md  diccionario-comandos-canonicos.md  protocolos-seguridad-limitaciones-guardrail.md  scripting-avanzado-rag-en.md  scripting-avanzado-rag.md  scripting-basico-rag-en.md  scripting-basico-rag.md  scripting-medio-rag-en.md
geli-docs/: GeliShell.md  commands-toml.md  handlers.md  shell-assistant.md  shell-builtins-customization.md  shell-builtins-g_jump.md  shell-executor.md  shell-guard-rules.md  shell-guard.md  shell-i18n.md  shell-selector.md  shell-translator-pipeline-steps.md  shell-translator-pipeline.md
installer/lib/: common.ps1  common.sh
locales/: en.toml  es.toml
src/: README.md  cli.rs  gerisabet.rs  lib.rs  main.rs  repl.rs  setup.rs  utils.rs
src/cli/: README.md  gerisabet.rs
src/commands/: README.md  cargo-commands.toml  commands.toml  docker-commands.toml  dotnet-commands.toml  git-commands.toml  typescript-commands.toml
src/handlers/: assistant.rs  command.rs  menu.rs  (+2 more)
(+86 files in other folders)
