[package]
name = "geli_shell"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/GerarddeTena/GeliShell"
description = "Cross-platform shell REPL with canonical command translation and security guardrails."
autobins = false
exclude = ["geli-docs/"]

[[bin]]
name = "geli"
path = "src/main.rs"

[[bin]]
name = "gerisabet"
path = "src/gerisabet.rs"

[[bin]]
name = "build_docs_db"
path = "src/bin/build_docs_db.rs"
required-features = ["dev-tools"]

[features]
dev-tools = []

[build]
rustflags = [
    "-Dunsafe_code"
]

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.23"
tokio = { version = "1.50.0", features = ["full"] }
crossterm = "0.29.0"
dirs = "6.0.0"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3.31"
rusqlite = { version = "0.32.1", features = ["bundled", "load_extension"] }
sha2 = "0.10.8"
indexmap = "2.7.1"
flate2 = "1.1.1"
tar = "0.4.44"
